Added Dockerfile for Render deployment

--- a/src/main/resources/static/pages/footer.html
+++ b/src/main/resources/static/pages/footer.html
@@ -242,10 +242,10 @@
 
 <!-- Floating WhatsApp + Call Buttons -->
 <div class="floating-buttons">
-  <a href="https://wa.me/919898490511" target="_blank" class="whatsapp-btn" title="Chat on WhatsApp">
+  <a href="https://wa.me/919327274109" target="_blank" class="whatsapp-btn" title="Chat on WhatsApp">
     <i class="fab fa-whatsapp"></i>
   </a>
-  <a href="tel:+919898490511" class="call-btn" title="Call">
+  <a href="tel:+919327274109" class="call-btn" title="Call">
     <i class="fas fa-phone-alt"></i>
   </a>
 </div>
@@ -281,7 +281,7 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Us</a></li>
-        <li><a href="#brochure">Brochure</a></li>
+        <li><a href="#brochure">EV Models Brochure</a></li>
         <li><a href="#evmodels">EV Models</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -305,10 +305,6 @@
      <li>
       📍 Shop No.-21, Vimal Paras, Shopping Center, Disa Bazar,
       <br> Banaskantha, Deesa, Gujarat, India, 385535
-    </li>
-    <li>
-      📍 PLOT NO. 75, SHANTINAGAR SOCIETY, Rajmandir Multiplex,
-      <br> SHANTINAGAR SOCIETY, Deesa, Banaskantha, Gujarat, 385535
     </li>
     <li>
       📞 <a href="tel:+919327274109" class="contact-link">+91 93272 74109</a>
