--- a/src/main/resources/static/pages/header.html
+++ b/src/main/resources/static/pages/header.html
@@ -14,8 +14,8 @@
     </div> -->
     <nav class="nav-links">
   <a href="#home" class="nav-link">Home</a>
-  <a href="#brochure" class="nav-link">EV Models</a>
-  <a href="#evmodels" class="nav-link">EV Models1</a>
+  <a href="#brochure" class="nav-link">EV Models Brochure</a>
+  <a href="#evmodels" class="nav-link">EV Models</a>
   <a href="#prebooking" class="nav-link">Pre-Booking</a>
   <a href="#contact" class="nav-link">Contact</a>
    <a href="#about">About</a>
@@ -39,7 +39,8 @@
 
    <nav id="side-drawer">
   <a href="#home" class="nav-link">Home</a>
-  <a href="#evmodels" class="nav-link">EV Models</a>
+  <a href="#brochure" class="nav-link">EV Models Brochure</a>
+    <a href="#evmodels" class="nav-link">EV Models</a>
   <a href="#prebooking" class="nav-link">Pre-Booking</a>
   <a href="#contact" class="nav-link">Contact</a>
    <a href="#about">About</a>
