--- a/src/main/resources/static/pages/header.html
+++ b/src/main/resources/static/pages/header.html
@@ -1,26 +1,21 @@
 <header>
   <div class="nav-container">
-    <div class="logo">EVOLVE MOTOCORP</div>
+    <!-- Logo with link -->
+    <div class="logo">
+  <img src="images/logo/evolve logo.jpg" alt="Evolve Logo" class="site-logo" />
+  <span>EVOLVE MOTOCORP</span>
+</div>
+
 
     <!-- Desktop nav -->
-    <!-- <div class="nav-links">
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#prebooking">Prebooking</a>
-      <a href="#evmodels">Ev Models</a>
-      <a href="#contact">Contact</a>
-      <li><a href="#brochure">Brochure</a></li>
-
-    </div> -->
     <nav class="nav-links">
-  <a href="#home" class="nav-link">Home</a>
-  <a href="#brochure" class="nav-link">EV Models Brochure</a>
-  <a href="#evmodels" class="nav-link">EV Models</a>
-  <a href="#prebooking" class="nav-link">Pre-Booking</a>
-  <a href="#contact" class="nav-link">Contact</a>
-   <a href="#about">About</a>
-</nav>
-
+      <a href="#home" class="nav-link">Home</a>
+      <a href="#brochure" class="nav-link">EV Models Brochure</a>
+      <a href="#evmodels" class="nav-link">EV Models</a>
+      <a href="#prebooking" class="nav-link">Pre-Booking</a>
+      <a href="#contact" class="nav-link">Contact</a>
+      <a href="#about" class="nav-link">About</a>
+    </nav>
 
     <!-- Hamburger icon for mobile -->
     <div class="hamburger" id="hamburger">
@@ -29,22 +24,14 @@
   </div>
 
   <!-- Mobile Side Drawer -->
-  <!-- <nav id="side-drawer">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#prebooking">Prebooking</a>
-    <a href="#evmodels">Ev Models</a>
-    <a href="#contact">Contact</a>
-  </nav> -->
-
-   <nav id="side-drawer">
-  <a href="#home" class="nav-link">Home</a>
-  <a href="#brochure" class="nav-link">EV Models Brochure</a>
+  <nav id="side-drawer">
+    <a href="#home" class="nav-link">Home</a>
+    <a href="#brochure" class="nav-link">EV Models Brochure</a>
     <a href="#evmodels" class="nav-link">EV Models</a>
-  <a href="#prebooking" class="nav-link">Pre-Booking</a>
-  <a href="#contact" class="nav-link">Contact</a>
-   <a href="#about">About</a>
-</nav>
+    <a href="#prebooking" class="nav-link">Pre-Booking</a>
+    <a href="#contact" class="nav-link">Contact</a>
+    <a href="#about" class="nav-link">About</a>
+  </nav>
 
   <!-- Overlay for drawer -->
   <div id="nav-overlay"></div>
