add payment method live

--- a/src/main/resources/static/admin_evmodels.html
+++ b/src/main/resources/static/admin_evmodels.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Admin — Manage EV Models</title>
+  <link rel="icon" type="image/png" href="images/logo/evolve_favicon_v2.png">
+
   <!-- Required Styles -->
 <link rel="stylesheet" href="Offline/css/bootstrap.min.css">
 <link rel="stylesheet" href="Offline/css/dataTables.bootstrap5.min.css">
@@ -128,6 +130,8 @@
 <script src="Offline/js/vfs_fonts.js"></script>
 <script src="Offline/js/buttons.html5.min.js"></script>
 <script src="Offline/js/buttons.print.min.js"></script>
+<!-- <script src="assets/js/stopdt.js"></script> -->
+<script src="Offline/stop/Stopinspect.js"></script>
   <script>
     // Configuration
     var loginRedirect = "/Evolve_Ev/index.html#admin";
