--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,40 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-IN">
 <head>
+  <!-- Basic Meta -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EVOLVE MOTOCORP</title>
-<link rel="icon" type="image/jpeg" href="images/logo/evolve logo.jpg" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>EVOLVE MOTOCORP – Electric Vehicles & Coolant Solutions in India</title>
+<meta name="description" content="EVOLVE MOTOCORP offers premium electric scooters, e-bikes, and coolant solutions. Discover sustainable mobility and pre-book your EV today in Gujarat, India.">
+<meta name="keywords" content="Evolve Motocorp, Electric Scooters, Electric Bikes, EV Booking, Coolant Solutions, Gujarat EV, Green Mobility, Evolve EV">
+<meta name="author" content="EVOLVE MOTOCORP | RV Enterprise">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://evolvemotocorp.com/">
+
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/logo/evolve_favicon_v2.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/logo/evolve_favicon_v2.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/logo/evolve_favicon_v2.png">
+
+
+  <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/privacypolicy.css">
-<link rel="stylesheet" href="Offline/css/all.min.css" />
-<!-- ✅ Bootstrap CSS CDN -->
-<link rel="stylesheet" href="Offline/css/bootstrap.min.css">
-<!-- AOS CSS -->
-<link href="Offline/css/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="Offline/css/all.min.css" />
+  <link rel="stylesheet" href="Offline/css/bootstrap.min.css">
+  <link href="Offline/css/aos.css" rel="stylesheet">
 
+  <!-- 🔗 Open Graph (for Facebook / LinkedIn) -->
+  <meta property="og:title" content="EVOLVE MOTOCORP – Book Your Electric Vehicle Today">
+  <meta property="og:description" content="Explore Evolve Motocorp’s range of electric scooters and coolant products. Eco-friendly, stylish, and affordable rides for the future.">
+  <meta property="og:image" content="https://evolvemotocorp.com/images/meta-preview.jpg">
+  <meta property="og:url" content="https://evolvemotocorp.com/">
+  <meta property="og:type" content="website">
+
+  <!-- 🔗 Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="EVOLVE MOTOCORP – Electric Vehicles & Coolant Solutions">
+  <meta name="twitter:description" content="Discover premium EV scooters and coolant products by EVOLVE MOTOCORP. Go green with smart pre-booking options.">
+  <meta name="twitter:image" content="https://evolvemotocorp.com/images/meta-preview.jpg">
+
+  <!-- 🧭 Local Business Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "EVOLVE MOTOCORP",
+  "image": "https://evolvemotocorp.com/images/logo/evolve_favicon_v2.png",
+  "@id": "https://evolvemotocorp.com",
+  "url": "https://evolvemotocorp.com",
+  "telephone": "+919327274109",
+  "priceRange": "₹₹",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Shop No.-21, Vimal Paras, Shopping Center, Disa Bazar",
+    "addressLocality": "Banaskantha, Deesa",
+    "addressRegion": "Gujarat",
+    "postalCode": "385535",
+    "addressCountry": "IN"
+  },
+  "openingHours": "Mo-Sa 09:00-19:00",
+  "sameAs": [
+    "https://www.facebook.com/evolvemotocorp",
+    "https://www.instagram.com/evolvemotocorp"
+  ]
+}
+</script>
 
 
 </head>
-<body>
 
+<body>
   <div id="header"></div>
   <main id="main-content"></main>
   <div id="footer"></div>
 
-  
+  <!-- JS -->
   <script src="Offline/js/jquery.min.js"></script>
   <script src="js/header_footer.js"></script>
   <script src="js/router.js"></script>
   <script src="js/nav.js"></script>
-
-<!-- ✅ Bootstrap JavaScript + Popper.js -->
-<script src="Offline/js/bootstrap.bundle.min.js"></script>
-<!-- AOS JS -->
-<script src="Offline/js/aos.js"></script>
-<script>
-  AOS.init();
-</script>
-
+  <script src="Offline/js/bootstrap.bundle.min.js"></script>
+  <script src="Offline/js/aos.js"></script>
+  <script src="assets/js/stopdt.js"></script>
+  <script src="Offline/stop/Stopinspect.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
