--- a/src/main/resources/static/pages/admin.html
+++ b/src/main/resources/static/pages/admin.html
@@ -89,7 +89,7 @@
   <form id="voucherForm" class="row g-3">
     <div class="col-md-6">
       <label for="receiptStart" class="form-label">Start Receipt No.</label>
-      <input type="text" class="form-control" id="receiptStart" placeholder="EV202550" required />
+      <input type="text" class="form-control" id="receiptStart" placeholder="EVG17401" required />
     </div>
     <div class="col-md-6">
       <label for="receiptEnd" class="form-label">End Receipt No.</label>
@@ -97,7 +97,7 @@
     </div>
     <div class="col-md-6">
       <label for="couponStart" class="form-label">Start Coupon No.</label>
-      <input type="text" class="form-control" id="couponStart" placeholder="CPN202550" required />
+      <input type="text" class="form-control" id="couponStart" placeholder="EV20001" required />
     </div>
     <div class="col-md-6">
       <label for="couponEnd" class="form-label">End Coupon No.</label>
