--- a/src/main/resources/static/pages/home.html
+++ b/src/main/resources/static/pages/home.html
@@ -3,32 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EVOLVE MOTOCORP | Coolant Solutions</title>
+  <title>EVOLVE MOTOCORP | Electric Vehicles & Coolant Solutions</title>
+  <meta name="description" content="Explore EVOLVE MOTOCORP’s electric scooters, coolant products, and pre-booking offers. Join the revolution of sustainable transport in Gujarat.">
   <link rel="stylesheet" href="css/HomeStyle.css" />
 </head>
 <body>
 
   <!-- ✅ Hero Banner Section -->
   <section class="hero-banner">
-    <img src="images/ev-banner.png" alt="Evolve EV Scooter" class="hero-img" />
+    <img src="images/ev-banner.png" alt="Evolve Motocorp Electric Scooter" class="hero-img" loading="lazy" />
   </section>
 
   <!-- ✅ About Section -->
   <section id="about">
-    <!-- Intro -->
     <div class="about-intro">
       <h1>About Us</h1>
       <p>
-        EVOLVE MOTOCORP is more than just a company — it’s a journey of transformation.  
-        Founded in <b>2023</b> by <b>R.V. Padhiyar</b>, we started with coolants that kept vehicles running, 
-        and today we are accelerating into the future of <b>electric mobility</b>.  
+        <strong>EVOLVE MOTOCORP</strong> is more than just a company — it’s a journey of transformation.  
+        Founded in <b>2023</b> by <b>R.V. Padhiyar</b>, we began with coolant manufacturing 
+        and have evolved into a leading name in <b>electric mobility</b>.
       </p>
     </div>
 
-    <!-- Hero Row -->
     <div class="about-hero">
       <div class="hero-content">
-        <h1>EVOLVE Electric Scooter</h1>
+        <h2>EVOLVE Electric Scooter</h2>
         <p>🚀 Pre-Book Now for Just <b>₹360</b> and Unlock Exciting Rewards:</p>
         <ul>
           <li>✔️ Free Silver Murti Gift</li>
@@ -39,12 +38,11 @@
       </div>
 
       <div class="about-right">
-        <img src="images/gift5.png" alt="Silver Murti" />
+        <img src="images/gift5.png" alt="Silver Murti Gift Offer" loading="lazy" />
       </div>
     </div>
   </section>
 
-  <!-- ✅ Scripts -->
   <script src="Offline/js/jquery.min.js"></script>
 </body>
 </html>
