--- a/src/main/resources/static/pages/header.html
+++ b/src/main/resources/static/pages/header.html
@@ -1,14 +1,15 @@
 <header>
   <div class="nav-container">
-    <!-- Logo with link -->
+    <!-- Logo -->
     <div class="logo">
-  <img src="images/logo/evolve logo.jpg" alt="Evolve Logo" class="site-logo" />
-  <span>EVOLVE MOTOCORP</span>
-</div>
-
+      <a href="#home" aria-label="Evolve Motocorp Home">
+        <img src="images/logo/evolve_logo.png" alt="Evolve Motocorp Electric Vehicle Logo" class="site-logo" />
+      </a>
+      <span class="brand-text">EVOLVE MOTOCORP</span>
+    </div>
 
     <!-- Desktop nav -->
-    <nav class="nav-links">
+    <nav class="nav-links" aria-label="Main Navigation">
       <a href="#home" class="nav-link">Home</a>
       <a href="#brochure" class="nav-link">EV Models Brochure</a>
       <a href="#evmodels" class="nav-link">EV Models</a>
@@ -18,13 +19,13 @@
     </nav>
 
     <!-- Hamburger icon for mobile -->
-    <div class="hamburger" id="hamburger">
+    <div class="hamburger" id="hamburger" aria-label="Open navigation menu">
       <i class="fas fa-bars"></i>
     </div>
   </div>
 
   <!-- Mobile Side Drawer -->
-  <nav id="side-drawer">
+  <nav id="side-drawer" aria-label="Mobile Navigation">
     <a href="#home" class="nav-link">Home</a>
     <a href="#brochure" class="nav-link">EV Models Brochure</a>
     <a href="#evmodels" class="nav-link">EV Models</a>
@@ -33,6 +34,6 @@
     <a href="#about" class="nav-link">About</a>
   </nav>
 
-  <!-- Overlay for drawer -->
+  <!-- Overlay -->
   <div id="nav-overlay"></div>
 </header>
