--- a/src/main/resources/static/error.html
+++ b/src/main/resources/static/error.html
@@ -81,7 +81,7 @@
 </head>
 <body>
   <div class="error-container">
-    <img src="images/logo/evolve_logo.png" alt="Evolve Motocorp Electric Vehicle Logo" class="logo">
+    <!-- <img src="images/logo/evolve_logo.png" alt="Evolve Motocorp Electric Vehicle Logo" class="logo"> -->
     <h1>🔒 Access Restricted</h1>
     <p>Developer tools have been disabled to protect <strong>Evolve Motocorp</strong> resources.<br>
     You’ll be redirected to the homepage shortly...</p>
