--- a/src/main/resources/static/pages/footer.html
+++ b/src/main/resources/static/pages/footer.html
@@ -270,7 +270,7 @@
       </p>
 
       <div class="social-icons">
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Facebook">
+        <a href="https://www.facebook.com/share/17dhZrjDR7/" target="_blank" rel="noopener" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="https://www.instagram.com/evolvemotocorp/?igsh=NHUxZTJ2NmJmdDM5" target="_blank" rel="noopener" aria-label="Instagram">
