--- a/src/main/resources/static/pages/prebooking.html
+++ b/src/main/resources/static/pages/prebooking.html
@@ -46,4 +46,5 @@
 <!-- Bootstrap JS & Script -->
 <script src="Offline/js/bootstrap.bundle.min.js"></script>
 <script src="Offline/js/checkout.js"></script>
+<script src="js/config.js"></script>
 <script src="js/prebooking.js"></script>
