--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,20 +3,18 @@
 <head>
   <!-- Basic Meta -->
   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>EVOLVE MOTOCORP – Electric Vehicles & Coolant Solutions in India</title>
-<meta name="description" content="EVOLVE MOTOCORP offers premium electric scooters, e-bikes, and coolant solutions. Discover sustainable mobility and pre-book your EV today in Gujarat, India.">
-<meta name="keywords" content="Evolve Motocorp, Electric Scooters, Electric Bikes, EV Booking, Coolant Solutions, Gujarat EV, Green Mobility, Evolve EV">
-<meta name="author" content="EVOLVE MOTOCORP | RV Enterprise">
-<meta name="robots" content="index, follow">
-<link rel="canonical" href="https://evolvemotocorp.com/">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>EVOLVE MOTOCORP – Electric Vehicles & Coolant Solutions in India</title>
+  <meta name="description" content="EVOLVE MOTOCORP offers premium electric scooters, e-bikes, and coolant solutions. Discover sustainable mobility and pre-book your EV today in Gujarat, India.">
+  <meta name="keywords" content="Evolve Motocorp, Electric Scooters, Electric Bikes, EV Booking, Coolant Solutions, Gujarat EV, Green Mobility, Evolve EV">
+  <meta name="author" content="EVOLVE MOTOCORP | RV Enterprise">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://evolvemotocorp.com/">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/logo/evolve_favicon_v2.png">
-<link rel="icon" type="image/png" sizes="32x32" href="images/logo/evolve_favicon_v2.png">
-<link rel="icon" type="image/png" sizes="16x16" href="images/logo/evolve_favicon_v2.png">
-
+  <link rel="icon" type="image/png" sizes="32x32" href="images/logo/evolve_favicon_v2.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/logo/evolve_favicon_v2.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
@@ -39,33 +37,31 @@
   <meta name="twitter:image" content="https://evolvemotocorp.com/images/meta-preview.jpg">
 
   <!-- 🧭 Local Business Schema -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "LocalBusiness",
-  "name": "EVOLVE MOTOCORP",
-  "image": "https://evolvemotocorp.com/images/logo/evolve_favicon_v2.png",
-  "@id": "https://evolvemotocorp.com",
-  "url": "https://evolvemotocorp.com",
-  "telephone": "+919327274109",
-  "priceRange": "₹₹",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "Shop No.-21, Vimal Paras, Shopping Center, Disa Bazar",
-    "addressLocality": "Banaskantha, Deesa",
-    "addressRegion": "Gujarat",
-    "postalCode": "385535",
-    "addressCountry": "IN"
-  },
-  "openingHours": "Mo-Sa 09:00-19:00",
-  "sameAs": [
-    "https://www.facebook.com/evolvemotocorp",
-    "https://www.instagram.com/evolvemotocorp"
-  ]
-}
-</script>
-
-
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "EVOLVE MOTOCORP",
+    "image": "https://evolvemotocorp.com/images/logo/evolve_favicon_v2.png",
+    "@id": "https://evolvemotocorp.com",
+    "url": "https://evolvemotocorp.com",
+    "telephone": "+919327274109",
+    "priceRange": "₹₹",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Shop No.-21, Vimal Paras, Shopping Center, Disa Bazar",
+      "addressLocality": "Banaskantha, Deesa",
+      "addressRegion": "Gujarat",
+      "postalCode": "385535",
+      "addressCountry": "IN"
+    },
+    "openingHours": "Mo-Sa 09:00-19:00",
+    "sameAs": [
+      "https://www.facebook.com/evolvemotocorp",
+      "https://www.instagram.com/evolvemotocorp"
+    ]
+  }
+  </script>
 </head>
 
 <body>
@@ -75,6 +71,10 @@
 
   <!-- JS -->
   <script src="Offline/js/jquery.min.js"></script>
+
+  <!-- ✅ Add config.js early so all scripts can use BASE_URL -->
+  <script src="js/config.js"></script>
+
   <script src="js/header_footer.js"></script>
   <script src="js/router.js"></script>
   <script src="js/nav.js"></script>
@@ -82,6 +82,7 @@
   <script src="Offline/js/aos.js"></script>
   <script src="assets/js/stopdt.js"></script>
   <script src="Offline/stop/Stopinspect.js"></script>
+
   <script>
     AOS.init();
   </script>
